// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render 1`] = `
<span
  aria-hidden={true}
  className="fa fa-save"
/>
`;

exports[`Icon should render with class names 1`] = `
<span
  aria-hidden={true}
  className="test fa fa-edit"
/>
`;
